--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -7,8 +7,8 @@ body {
 }
 
 html {
-  box-sizing: border-box;
   font-size: 14px;
+  box-sizing: border-box;
   -webkit-tap-highlight-color: transparent;
 }
 
@@ -64,4 +64,12 @@ a {
 
 ul, ol {
   list-style: none;
+}
+
+svg {
+  box-sizing: content-box;
+}
+
+*, *:before, *:after {
+  box-sizing: inherit;
 }
