--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -3,3 +3,18 @@
 $--font-path: "~element-ui/lib/theme-chalk/fonts";
 
 @import "~element-ui/packages/theme-chalk/src/index";
+
+
+
+#nprogress .bar {
+  background: $--color-primary !important;
+}
+
+#nprogress .peg {
+  box-shadow: 0 0 10px $--color-primary, 0 0 5px $--color-primary !important;
+}
+
+#nprogress .spinner-icon {
+  border-top-color: $--color-primary;
+  border-left-color: $--color-primary;
+}
