✏️ feat(element status) Add status cover file

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -2,6 +2,7 @@
 @import '@/styles/global-class.scss';
 @import '@/styles/element-variables.scss';
 @import '@/styles/theme.scss';
+@import '@/styles/element-status.scss';
 
 body {
   width: 100vw;
