--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,15 +1,33 @@
 
+@import '@/styles/global-class.scss';
+@import '@/styles/element-variables.scss';
+@import '@/styles/theme.scss';
+@import '@/styles/element-status.scss';
+
 body {
+  width: 100vw;
+  color: #495164;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
   text-rendering: optimizeLegibility;
   font-family: -apple-system, BlinkMacSystemFont, "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", sans-serif;
+  background-color: #f5f7fa;
 }
 
 html {
-  box-sizing: border-box;
   font-size: 14px;
+  box-sizing: border-box;
   -webkit-tap-highlight-color: transparent;
+  overflow-y: scroll;
+}
+
+:root {
+  overflow-y: auto;
+  overflow-x: hidden;
+}
+
+:root body {
+  position: absolute;
 }
 
 #app, body, html {
@@ -64,4 +82,39 @@ a {
 
 ul, ol {
   list-style: none;
+}
+
+svg {
+  box-sizing: content-box;
+}
+
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
+// 滚动条样式
+::-webkit-scrollbar {
+  width: 6px;
+  height: 6px;
+}
+::-webkit-scrollbar-thumb {
+  background: rgba(#000, 0.2);
+  border-radius: 3px;
+}
+::-webkit-scrollbar-track {
+  background: rgba(#000, 0.06);
+  border-radius: 3px;
+}
+
+// el-table 表格与表头错位 bug
+body .el-table th.gutter {
+  display: table-cell !important;
+}
+
+body .el-table colgroup.gutter {
+  display: table-cell !important;
+}
+
+table {
+  width: 100% !important;
 }
